--- a/text/refs.bib
+++ b/text/refs.bib
@@ -343,11 +343,11 @@ Columbia, Canada}},
 @article{english2021b,
   title = {Contrasting Climate Velocity Impacts in Warm and Cool Locations Show That Effects of Marine Warming Are Worse in Already Warmer Temperate Waters},
   author = {English, Philina A. and Ward, Eric J. and Rooper, Christopher N. and Forrest, Robyn E. and Rogers, Luke A. and Hunter, Karen L. and Edwards, Andrew M. and Connors, Brendan M. and Anderson, Sean C.},
-  year = {2021},
+  year = {2022},
   journal = {Fish and Fisheries},
-  volume = {In press},
+  volume = {23},
+  issue = {1},
   doi = {10.1111/faf.12613},
-  langid = {english},
   annotation = {\_eprint: https://onlinelibrary.wiley.com/doi/pdf/10.1111/faf.12613}
 }
 
@@ -362,8 +362,8 @@ Columbia, Canada}},
 }
 
 @Book{            anderson2022,
-  title         = {sdmTMB: Spatiotemporal species distribution GLMMs with
-                  'TMB'},
+  title         = {sdmTMB: Spatiotemporal species distribution {GLMMs} with
+                  {TMB}},
   author        = {{Anderson}, {Sean C.} and {Ward},
                   {Eric J.} and {Barnett}, {Lewis A. K.} and {English}, {Philina A.}},
   year          = {2022},
@@ -415,11 +415,11 @@ Columbia, Canada}},
 
 @article {anderson2021sopopreprint,
 	author = {Anderson, Sean C. and Connors, Brendan M. and English, Philina A. and Forrest, Robyn E. and Haigh, Rowan and Holt, Kendra R.},
-	title = {Trends in Pacific Canadian groundfish stock status},
+	title = {Trends in {Pacific Canadian} groundfish stock status},
 	elocation-id = {2021.12.13.472502},
 	year = {2021},
 	doi = {10.1101/2021.12.13.472502},
-	journal = {bioRxiv}
+	journal = {bioRxiv. doi: https://doi.org/10.1101/2021.12.13.472502}
 }
 
 @Article{         stanly2009canary,
