--- a/text/refs.bib
+++ b/text/refs.bib
@@ -418,6 +418,7 @@ Columbia, Canada}},
 	title = {Trends in {Pacific Canadian} groundfish stock status},
 	elocation-id = {2021.12.13.472502},
 	year = {2021},
+	URL = {https://doi.org/10.1101/2021.12.13.472502},
 	doi = {10.1101/2021.12.13.472502},
 	journal = {bioRxiv. doi: https://doi.org/10.1101/2021.12.13.472502}
 }
@@ -429,4 +430,14 @@ Columbia, Canada}},
   journal       = {DFO Can. Sci. Advis. Sec. Res. Doc.},
   volume        = {2009/013},
   pages         = {xxii + 198~p}
+}
+
+@article {Kanamori2022Dogfish,
+	author = {Kanamori, Yuki and Yano, Toshikazu and Okamura, Hiroshi and Yagi, Yuta},
+	title = {Spatio-temporal model and machine learning method reveal process of phenological shift under climate change of {North Pacific} spiny dogfish},
+	elocation-id = {2022.03.01.482455},
+	year = {2022},
+	doi = {10.1101/2022.03.01.482455},
+	URL = {https://www.biorxiv.org/content/early/2022/03/01/2022.03.01.482455},
+	journal = {bioRxiv. doi: https://doi.org/10.1101/2022.03.01.482455}
 }
