--- a/text/gf2022-sopo.Rmd
+++ b/text/gf2022-sopo.Rmd
@@ -28,8 +28,8 @@ header-includes:
 
 ## Highlights
 
-* We summarized groundfish stock status as of 2021 by (1) fitting
-  a hierarchical Bayesian time-series model (including updated assessments for five stocks in 2021) and (2) joining model-based population indices with assessed biomass to
+* We summarized groundfish stock status as of 2021 by (1) gathering time series of stock assessment output, (2) fitting
+  a hierarchical Bayesian time-series model to them, and (3) joining model-based population indices with assessed biomass to
   illustrate how surveyed population trends have changed subsequent to the
   latest stock assessments.
 
